# gmx-green-kubo

./: .gitignore  README.md  environment.yml  gmx_gk_autocorr.py  pyproject.toml
