[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gmx-green-kubo"
version = "0.2.0"
description = "Green-Kubo viscosity from GROMACS MD trajectories — classical and hybrid (hGK) workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "gmx_gk_autocorr contributors" },
]
keywords = [
    "molecular-dynamics",
    "viscosity",
    "green-kubo",
    "gromacs",
    "autocorrelation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "plotly>=5.0",
]

[project.optional-dependencies]
# Pin to <1.0 — kaleido 1.x requires a separately-installed Chrome.
# 0.2.x ships its own bundled chromium and works out of the box.
static-plots = ["kaleido>=0.2,<1.0"]
# Faster text parsing for large pressure_components.xvg files (5-12x).
# Auto-detected at import time; np.loadtxt is used if not installed.
fast-io = ["polars>=1.0"]
# Faster FFT backend (~1.5-2x over the bundled scipy/pocketfft).
# Auto-detected at import time via scipy.fft.set_global_backend.
fast-fft = ["pyfftw>=0.13"]
# Everything optional in one shot.
fast = ["polars>=1.0", "pyfftw>=0.13"]

[project.scripts]
gmx-gk-autocorr = "gmx_gk_autocorr:main"

[project.urls]
"Source"                = "https://github.com/lilpoundcake/gmx-green-kubo"
"Inspired by (classical, repo)" = "https://github.com/MolSimGroup/gmx_gk_autocorr"
"Reference (classical)" = "https://doi.org/10.1021/acs.jcim.3c00947"
"Reference (hGK)"       = "https://doi.org/10.1021/acs.jpclett.5c03863"

[tool.setuptools]
py-modules = ["gmx_gk_autocorr"]
